--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/jues/eclipse-workspace/json-mina/lib/mina-core-2.0.16.jar"/>
-	<classpathentry kind="lib" path="/home/jues/eclipse-workspace/json-mina/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="/home/jues/eclipse-workspace/json-mina/lib/slf4j-api-1.7.21.jar"/>
-	<classpathentry kind="lib" path="/home/jues/eclipse-workspace/json-mina/lib/slf4j-nop-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/mina-core-2.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-nop-1.7.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
