--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/javax.json-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
