--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=TRACE, console,dailyFile
+log4j.rootCategory=DEBUG, console,dailyFile
 # log4j.rootLogger=DEBUG, console,dailyFile
 log4j.additivity.org.apache=true
 
